--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@
     grid-column-start: 1;
     grid-column-end: 5;
     border: 5px solid gray;
+    display:flex;
+    justify-content:flex-end;
+    align-items:center;
 }
 #button0{
     grid-column-start: 1;
@@ -15,6 +18,7 @@
 }
 #main{
     display: flex;
+    justify-content: center;
 }
 body{
     background-color:rgb(223, 255, 223);
