--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,24 @@
 #calculator{
     border: 8px solid black;
+    background-color: aliceblue;
     display: grid;
     grid-template-rows: repeat(6, 80px);
     grid-template-columns: repeat(4, 100px);
+    gap: 4px;
+    border-radius: 15% 5%;
+    padding: 50px;
 }
 #display{
     grid-column-start: 1;
     grid-column-end: 5;
-    border: 2px solid red;
     display:flex;
     justify-content:flex-end;
     align-items:center;
     font-size: 5em;
+    border: 1px solid black;
+    background-color: rgb(175, 230, 255);
+    border-radius: 15%;
+
 }
 #button0{
     grid-column-start: 1;
@@ -22,8 +29,28 @@
     justify-content: center;
 }
 body{
-    background-color:rgb(223, 255, 223);
+    background-color:rgb(225, 255, 225);
 }
+.operand{
+    background-color: rgb(255, 230, 175);
+    border-radius: 15%;
+}
+.operator{
+    background-color: rgb(175, 255, 230);
+    border-radius: 15%;
+
+}
+.restButton{
+    background-color: rgb(230, 175, 255);
+    border-radius: 15%;
+
+}
+#decimal, #operate{
+    background-color: rgb(175, 230, 255);
+    border-radius: 15%;
+
+}
+
 #history{
     display: flex;
     justify-content: center;
